# StereoMask

./: .gitignore  CMakeLists.txt  IMG_20260509_071704.msk  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  maskpoint.h  resources.qrc  stereoimageprocessor.cpp  stereoimageprocessor.h  stereoviewwidget.cpp  stereoviewwidget.h  undocommand.cpp  undocommand.h
